Momentpicker [FIX] IE overflow fix for buttons

--- a/src/core/elements/inputs/_momentpicker.less
+++ b/src/core/elements/inputs/_momentpicker.less
@@ -4,6 +4,7 @@
 
 luid-moment {
 	max-width: 5.25em;
+	overflow: visible !important; // Buttons
 
 	&:extend(.lui.input all);
 
